--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-pt">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
 
     <title>DevLinks</title>
   </head>
-  <div id="container"></div>
+  <div id="container">
+    <div id="profile">
+      <img
+        src="assets/avatar.png"
+        alt="Foto de Cristiano Lourenço sorrindo, utilizando uma t-shirt vermelha"
+      />
+      <p>@crisDev</p>
+    </div>
+  </div>
   <body></body>
 </html>
