creating the links

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       />
       <p>@crisDev</p>
     </div>
+
+    <ul>
+      <li><a href="#"></a>Conheça meu Linkedin</li>
+      <li><a href="#"></a>Conheça meu PortFolio</li>
+      <li><a href="#"></a>Conheça meus Projectos</li>
+      <li><a href="#"></a>Conheça minhas redes</li>
+    </ul>
   </div>
   <body></body>
 </html>
