--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </div>
 
     <ul>
-      <li><a href="#"></a>Conheça meu Linkedin</li>
-      <li><a href="#"></a>Conheça meu PortFolio</li>
-      <li><a href="#"></a>Conheça meus Projectos</li>
-      <li><a href="#"></a>Conheça minhas redes</li>
+      <li><a href="#">Conheça meu Linkedin</a></li>
+      <li><a href="#">Conheça meu PortFolio</a></li>
+      <li><a href="#">Conheça meus Projectos</a></li>
+      <li><a href="#">Conheça minhas redes</a></li>
     </ul>
   </div>
   <body></body>
