--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-pt">
+<html lang="pt-pt" class = 'light'>
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,14 +30,16 @@
     </ul>
   </div>
   <body>
+    <div id="social-links">
+      <a href="#"><ion-icon name="logo-github"></ion-icon></a>
+      <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+      <a href="#"><ion-icon name="logo-youtube"></ion-icon></a>
+      <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+    </div>
     <footer>
-      <div id="social-links">
-        <a href="#"><ion-icon name="logo-github"></ion-icon></a>
-        <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-        <a href="#"><ion-icon name="logo-youtube"></ion-icon></a>
-        <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
-      </div>
-    </footer>
+      <p>
+        Feito com ❤ pela <a href=""> Rocketseat</a></footer>
+      </p>
 
     <script
       type="module"
