making the moon button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-pt" class = 'light'>
+<html lang="pt-pt" class = ''>
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,7 +21,10 @@
       />
       <p>@crisDev</p>
     </div>
-
+        <div id="switch">
+          <button></button>
+          <Span></Span>
+        </div>
     <ul>
       <li><a href="#">Conheça meu Linkedin</a></li>
       <li><a href="#">Conheça meu PortFolio</a></li>
