--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       />
       <p>@crisDev</p>
     </div>
-        <div id="switch">
+        <div id="switch" onclick="toggleMode()">
           <button></button>
           <Span></Span>
         </div>
@@ -52,5 +52,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
