adding the mediaquery to chose the images on desktop

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="container">
     <div id="profile">
       <img
-        src="assets/avatar.png"
+        src="assets/avatar_light.svg"
         alt="Foto de Cristiano Lourenço sorrindo, utilizando uma t-shirt vermelha"
       />
       <p>@crisDev</p>
