--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <Span></Span>
         </div>
     <ul>
-      <li><a href="#">Conheça meu Linkedin</a></li>
+      <li><a href="https://www.linkedin.com/in/cristiano-louren%C3%A7o-a00908228/" target="_blank">Conheça meu Linkedin</a></li>
       <li><a href="#">Conheça meu PortFolio</a></li>
       <li><a href="#">Conheça meus Projectos</a></li>
       <li><a href="#">Conheça minhas redes</a></li>
@@ -34,10 +34,9 @@
   </div>
   <body>
     <div id="social-links">
-      <a href="#"><ion-icon name="logo-github"></ion-icon></a>
-      <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-      <a href="#"><ion-icon name="logo-youtube"></ion-icon></a>
-      <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+      <a href="https://github.com/CristianoLourenco"><ion-icon name="logo-github" target="_blank"></ion-icon></a>
+      <a href="#"><ion-icon name="logo-instagram"></ion-icon></a> 
+      <a href="https://www.linkedin.com/in/cristiano-louren%C3%A7o-a00908228/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
     </div>
     <footer>
       <p>
