--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <footer>
       <p>
-        Feito com ❤ pela <a href=""> Rocketseat</a></footer>
+        Feito com ❤ e apoio da <a href="https://app.rocketseat.com.br/dashboard" target="_blank"> Rocketseat</a></footer>
       </p>
 
     <script
